Mudança das cores dos icones

--- a/css/index.css
+++ b/css/index.css
@@ -211,7 +211,7 @@
 
     .icone-servico {
       font-size: 2.5rem;
-      color: #6ac1cc;
+      color: #64886f;
       margin-bottom: 15px;
     }
 
